k8s/orcapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orcapi-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: slashy/orc-api
          ports:
            - containerPort: 8080
